Fixed up scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -98,3 +98,12 @@ footer {
 #current-page {
     color: var(--acc-color);
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: black;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: white;
+}
